2003-06-02 Gustavo Niemeyer <niemeyer@conectiva.com>
	* modules/remoteinfo.py: New module!

2003-05-30 Gustavo Niemeyer <niemeyer@conectiva.com>
	* server.py: If unable to transform string to ISO-8859-1, send
	  it in UTF8.

2003-05-29 Gustavo Niemeyer <niemeyer@conectiva.com>
	* modules/google.py: Introduced basic google module using the
	  google SOAP api.
	* pybot/util/SOAPpy: Added SOAPpy 0.10.1 to the source tree.

2003-05-16 Gustavo Niemeyer <niemeyer@conectiva.com>
	* contrib/vera2info.py: Updated to add multiple values in the
	  same key, when the keys are the same.
	* data/infopacks/vera.info: Updated to vera 1.9.

2003-05-12 Gustavo Niemeyer <niemeyer@conectiva.com>
	* *: Major work on pybot!!
	* modules/*: All modules moved to the new re matching system.
	* command.py: Removed old matching system.
	* modules/*: Pickling replaced by sqlite in all places were
	  persistence was needed.
	* modules/*: All modules have inline help.
	* modules/*: All modules have permission help.
	* modules/infopack.py: Infopacks have help now.
	* *: Many method names changed to a better alternative.
	* options.py: Removed soft/hard relation. Now there's a single
	  dict that might resist to reboots, if necessary. Notice that
	  no standard module uses it for persistent options, since they
	  use sqlite.
	* modules/example.py: Introduced basic sample module.
	* modules/soap.py: Obsoleted. Use xmlrpc instead.
	* scripts/pybotmsg.py: Added a basic xmlrpc client.
	* runner.py: Included other modules in the "default load" ones.
	* *: Other changes I probably forgot.

2003-05-09 Gustavo Niemeyer <niemeyer@conectiva.com>
	* modules/userdata.py,modules/permission.py: A much better userdata
	  registry and permission system was developed.
	* misc.py: Increased maximum line size to 400 characters.
	* server.py,runner.py,modules/permission.py: Implemented a
	  pybot console, allowing one to talk to pybot locally.
	* scripts/*: Removed setup scripts. They're not needed anymore